<resources>
    <string name="app_name">News magazine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="body_text_news" translatable="false">Body text news</string>
    <string name="body_name_news" translatable="false">Body name news</string>
    <string name="body_image_news" translatable="false">Body image news</string>
    <string name="body_author_news" translatable="false">Body author news</string>
    <string name="sorted_by">sort by:</string>
    <string name="date">Data</string>
    <string name="author">Author</string>
    <string name="theme">Theme</string>
    <string name="politic">Politic</string>
    <string name="technology">Thechnology</string>
    <string name="game">Game</string>
    <string name="economic">Economic</string>
    <string name="sort">sort</string>
    <string name="title">title</string>

</resources>