<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/radio_theme_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:button="@null"
            android:gravity="center"
            android:text="@string/date"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio_theme_author"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white"
            android:button="@null"
            android:drawableEnd="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/author"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio_theme_theme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white"
            android:button="@null"
            android:drawableEnd="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/theme"
            android:textAllCaps="true" />
    </RadioGroup>

</FrameLayout>